--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -680,6 +680,23 @@ body {
     margin: 0;
 }
 
+.gallery-main-media .gallery-main-video-wrapper {
+    width: 100%;
+    height: 100%;
+    min-height: 300px;
+    max-height: 400px;
+    position: relative;
+}
+
+.gallery-main-media .gallery-main-video-wrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+}
+
 .gallery-main-media .gallery-main-video {
     width: 100%;
     height: 100%;
